--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <div class="services_content">
                     <h6>OUR SERVICES</h6>
-                    <h2>Vploy Provides Best Solution for Busniess</h2>
+                    <h2>Vploy Provides The Right Solutions For Your Business</h2>
                     <p>
                         Vploy delivers agile remote staffing to help businesses scale efficiently across tech, admin, and support roles.</p>
                     <ul class="list-unstyled">
