--- a/services.html
+++ b/services.html
@@ -604,9 +604,12 @@ s0.parentNode.insertBefore(s1,s0);
             </div>
         </div>
     </div>
-    <div class="bottom-portion">
-        <div class="copyright col-xl-12"> 
+    <div class="bottom-portion d-flex justify-content-between mx-5">
+        <div class="copyright "> 
             <p>Copyright 2025, Vploy.us All Rights Reserved.</p>
+        </div>
+        <div class="copyright "> 
+            <p>Powerd by <span class="fw-bolder text-danger"><a href="https://www.ugro.us/" class="text-decoration-none fw-bolder text-warning">Ugro</a></span></p>
         </div>
     </div>
     <div class="footer_logo">
